# vegebot

./: .gitignore  README.md
lettuce_detect/: CMakeLists.txt  package.xml
lettuce_detect/cascade_data/: stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
lettuce_detect/deep_lettuce_detector/: LettuceUI.py  LettuceUI_support.py  darknet  darknet.py  deep_lettuce_detector.py
lettuce_detect/nodes/: lettuce_detector
lettuce_detect/stuff/: test.py
lettuce_prey/: CMakeLists.txt  package.xml  setup.py
lettuce_prey/nodes/: lettuce_prey.py
lettuce_sampler/: CMakeLists.txt  package.xml
lettuce_sampler/nodes/: lettuce_sampler
lettuce_test/: CMakeLists.txt  package.xml
lettuce_test/nodes/: test  test9
vegebot/: CMakeLists.txt  README.md  package.xml
vegebot_calibrate/: CMakeLists.txt  package.xml
vegebot_calibrate/nodes/: locate_markers
vegebot_calibrate/scripts/: create_marker  detect_markers  locate_markers
vegebot_commander/: CMakeLists.txt  README.md  package.xml
vegebot_commander/nodes/: vegebot_commander
vegebot_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
vegebot_msgs/msg/: CalibrationRecords.msg  LettuceHypothesis.msg  MarkerCorners.msg
vegebot_run/: CMakeLists.txt  README.md  package.xml
vegebot_run/config/: hand_camera.yaml  overhead_camera.yaml  vegebot.srdf
vegebot_run/launch/: nousb-sim.launch  run.launch  run2.launch  sim.launch  sim2.launch  simnorviz.launch  test.launch  vegebot_bringup.launch  vegebot_move_group.launch  vegebot_moveit_planning_execution.launch  vegebot_planning_context.launch  vegebot_ur10.launch  vegebot_ur10_upload.launch  webtest.launch
vegebot_run/urdf/: ur10.urdf.xacro  vegebot-bucket1.urdf.xacro  vegebot.urdf-bucket2.xacro  vegebot.urdf.xacro  vegebot_limited.urdf.xacro  vegebot_limited1.urdf.xacro  (+1 more)
vegebot_webserver/: CMakeLists.txt  README.md  package.xml
(+42 files in other folders)
